programs_backup_legacy/build_err.log
warning: profiles for the non root package will be ignored, specify profiles at the workspace root:
package:   /mnt/c/Users/94447/Desktop/crypto/Monad/MemeHunter/programs/meme-hunter/Cargo.toml
workspace: /mnt/c/Users/94447/Desktop/crypto/Monad/MemeHunter/Cargo.toml
   Compiling meme-hunter v0.1.0 (/mnt/c/Users/94447/Desktop/crypto/Monad/MemeHunter/programs/meme-hunter)
error[E0428]: the name `A` is defined multiple times
  --> programs/meme-hunter/src/lib.rs:15:1
   |
15 | no_allocator!();
   | ^^^^^^^^^^^^^^^ `A` redefined here
...
18 | entrypoint!(process_instruction);
   | -------------------------------- previous definition of the value `A` here
   |
   = note: `A` must be defined only once in the value namespace of this module
   = note: this error originates in the macro `no_allocator` (in Nightly builds, run with -Z macro-backtrace for more info)

error: cannot define multiple global allocators
  --> programs/meme-hunter/src/lib.rs:18:1
   |
15 | no_allocator!();
   | --------------- previous global allocator defined here
...
18 | entrypoint!(process_instruction);
   | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ cannot define a new global allocator
   |
   = note: this error originates in the attribute macro `global_allocator` which comes from the expansion of the macro `entrypoint` (in Nightly builds, run with -Z macro-backtrace for more info)

For more information about this error, try `rustc --explain E0428`.
error: could not compile `meme-hunter` (lib) due to 2 previous errors
